reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__basic__reflectapi_response_headers-5.snap
---
source: reflectapi-demo/src/tests/basic.rs
expression: python
---
"""
DO NOT MODIFY THIS FILE MANUALLY
This file was generated by reflectapi-cli

Schema name: response_headers_test
"""

from __future__ import annotations


# Standard library imports
from datetime import datetime
from enum import Enum
from typing import Annotated, Any, Generic, Optional, TypeVar, Union

# Third-party imports
from pydantic import BaseModel, ConfigDict, Field

# Runtime imports
from reflectapi_runtime import AsyncClientBase, ClientBase, ApiResponse
from reflectapi_runtime import ReflectapiEmpty
from reflectapi_runtime import ReflectapiInfallible


class ReflectapiDemoTestsBasicResponseHeaders(BaseModel):
    model_config = ConfigDict(
        extra="ignore", populate_by_name=True, protected_namespaces=(), defer_build=True
    )

    retry_after: str | None = Field(
        default=None,
        serialization_alias="retry-after",
        validation_alias="retry-after",
        description="Seconds, or an HTTP date, after which to retry",
    )
    x_request_id: str | None = Field(
        default=None,
        serialization_alias="x-request-id",
        validation_alias="x-request-id",
    )
    x_expires_at: datetime | None = Field(
        default=None,
        serialization_alias="x-expires-at",
        validation_alias="x-expires-at",
    )
    x_cache: reflectapi_demo.tests.basic.CacheStatus | None = Field(
        default=None, serialization_alias="x-cache", validation_alias="x-cache"
    )


class ReflectapiDemoTestsBasicRouteResponseHeaders(BaseModel):
    model_config = ConfigDict(
        extra="ignore", populate_by_name=True, protected_namespaces=(), defer_build=True
    )

    cf_ray: str | None = Field(
        default=None, serialization_alias="cf-ray", validation_alias="cf-ray"
    )


class ReflectapiDemoTestsBasicCacheStatus(str, Enum):
    HIT = "Hit"
    MISS = "Miss"


class ReflectapiDemoTestsBasicResponseHeadersTestError(str, Enum):
    CONFLICT = "Conflict"


# Namespace classes for dotted access to types
class reflectapi_demo:
    """Namespace for reflectapi_demo types."""

    class tests:
        """Namespace for tests types."""

        class basic:
            """Namespace for basic types."""

            ResponseHeaders = ReflectapiDemoTestsBasicResponseHeaders
            RouteResponseHeaders = ReflectapiDemoTestsBasicRouteResponseHeaders
            CacheStatus = ReflectapiDemoTestsBasicCacheStatus
            ResponseHeadersTestError = ReflectapiDemoTestsBasicResponseHeadersTestError


class AsyncBeforeClient:
    """Async client for before operations."""

    def __init__(self, client: AsyncClientBase) -> None:
        self._client = client

    async def default(
        self,
    ) -> ApiResponse[
        Any,
        reflectapi_demo.tests.basic.ResponseHeadersTestError,
        reflectapi_demo.tests.basic.ResponseHeaders,
    ]:
        """

        Returns:
            ApiResponse[Any, reflectapi_demo.tests.basic.ResponseHeadersTestError, reflectapi_demo.tests.basic.ResponseHeaders]: Success=Any, Error=reflectapi_demo.tests.basic.ResponseHeadersTestError
        """
        path = "/before.default"

        params: dict[str, Any] = {}
        return await self._client._make_request(
            path,
            params=params if params else None,
            response_model=None,
            error_model=reflectapi_demo.tests.basic.ResponseHeadersTestError,
            response_headers_model=reflectapi_demo.tests.basic.ResponseHeaders,
        )


class AsyncWithClient:
    """Async client for with_ operations."""

    def __init__(self, client: AsyncClientBase) -> None:
        self._client = client

    async def default(
        self,
    ) -> ApiResponse[
        Any,
        reflectapi_demo.tests.basic.ResponseHeadersTestError,
        reflectapi_demo.tests.basic.ResponseHeaders,
    ]:
        """

        Returns:
            ApiResponse[Any, reflectapi_demo.tests.basic.ResponseHeadersTestError, reflectapi_demo.tests.basic.ResponseHeaders]: Success=Any, Error=reflectapi_demo.tests.basic.ResponseHeadersTestError
        """
        path = "/with.default"

        params: dict[str, Any] = {}
        return await self._client._make_request(
            path,
            params=params if params else None,
            response_model=None,
            error_model=reflectapi_demo.tests.basic.ResponseHeadersTestError,
            response_headers_model=reflectapi_demo.tests.basic.ResponseHeaders,
        )


class AsyncWithRouteClient:
    """Async client for with_route operations."""

    def __init__(self, client: AsyncClientBase) -> None:
        self._client = client

    async def headers(
        self,
    ) -> ApiResponse[
        Any,
        reflectapi_demo.tests.basic.ResponseHeadersTestError,
        reflectapi_demo.tests.basic.RouteResponseHeaders,
    ]:
        """

        Returns:
            ApiResponse[Any, reflectapi_demo.tests.basic.ResponseHeadersTestError, reflectapi_demo.tests.basic.RouteResponseHeaders]: Success=Any, Error=reflectapi_demo.tests.basic.ResponseHeadersTestError
        """
        path = "/with.route_headers"

        params: dict[str, Any] = {}
        return await self._client._make_request(
            path,
            params=params if params else None,
            response_model=None,
            error_model=reflectapi_demo.tests.basic.ResponseHeadersTestError,
            response_headers_model=reflectapi_demo.tests.basic.RouteResponseHeaders,
        )


class AsyncClient(AsyncClientBase):
    """Async client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.before = AsyncBeforeClient(self)

        self.with_ = AsyncWithClient(self)

        self.with_route = AsyncWithRouteClient(self)

    async def infallible(
        self,
    ) -> ApiResponse[Any, Any, reflectapi_demo.tests.basic.ResponseHeaders]:
        """

        Returns:
            ApiResponse[Any, Any, reflectapi_demo.tests.basic.ResponseHeaders]: Response containing Any data
        """
        path = "/infallible"

        params: dict[str, Any] = {}
        return await self._make_request(
            path,
            params=params if params else None,
            response_model=None,
            response_headers_model=reflectapi_demo.tests.basic.ResponseHeaders,
        )


class BeforeClient:
    """Synchronous client for before operations."""

    def __init__(self, client: ClientBase) -> None:
        self._client = client

    def default(
        self,
    ) -> ApiResponse[
        Any,
        reflectapi_demo.tests.basic.ResponseHeadersTestError,
        reflectapi_demo.tests.basic.ResponseHeaders,
    ]:
        """

        Returns:
            ApiResponse[Any, reflectapi_demo.tests.basic.ResponseHeadersTestError, reflectapi_demo.tests.basic.ResponseHeaders]: Success=Any, Error=reflectapi_demo.tests.basic.ResponseHeadersTestError
        """
        path = "/before.default"

        params: dict[str, Any] = {}
        return self._client._make_request(
            path,
            params=params if params else None,
            response_model=None,
            error_model=reflectapi_demo.tests.basic.ResponseHeadersTestError,
            response_headers_model=reflectapi_demo.tests.basic.ResponseHeaders,
        )


class WithClient:
    """Synchronous client for with_ operations."""

    def __init__(self, client: ClientBase) -> None:
        self._client = client

    def default(
        self,
    ) -> ApiResponse[
        Any,
        reflectapi_demo.tests.basic.ResponseHeadersTestError,
        reflectapi_demo.tests.basic.ResponseHeaders,
    ]:
        """

        Returns:
            ApiResponse[Any, reflectapi_demo.tests.basic.ResponseHeadersTestError, reflectapi_demo.tests.basic.ResponseHeaders]: Success=Any, Error=reflectapi_demo.tests.basic.ResponseHeadersTestError
        """
        path = "/with.default"

        params: dict[str, Any] = {}
        return self._client._make_request(
            path,
            params=params if params else None,
            response_model=None,
            error_model=reflectapi_demo.tests.basic.ResponseHeadersTestError,
            response_headers_model=reflectapi_demo.tests.basic.ResponseHeaders,
        )


class WithRouteClient:
    """Synchronous client for with_route operations."""

    def __init__(self, client: ClientBase) -> None:
        self._client = client

    def headers(
        self,
    ) -> ApiResponse[
        Any,
        reflectapi_demo.tests.basic.ResponseHeadersTestError,
        reflectapi_demo.tests.basic.RouteResponseHeaders,
    ]:
        """

        Returns:
            ApiResponse[Any, reflectapi_demo.tests.basic.ResponseHeadersTestError, reflectapi_demo.tests.basic.RouteResponseHeaders]: Success=Any, Error=reflectapi_demo.tests.basic.ResponseHeadersTestError
        """
        path = "/with.route_headers"

        params: dict[str, Any] = {}
        return self._client._make_request(
            path,
            params=params if params else None,
            response_model=None,
            error_model=reflectapi_demo.tests.basic.ResponseHeadersTestError,
            response_headers_model=reflectapi_demo.tests.basic.RouteResponseHeaders,
        )


class Client(ClientBase):
    """Synchronous client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.before = BeforeClient(self)

        self.with_ = WithClient(self)

        self.with_route = WithRouteClient(self)

    def infallible(
        self,
    ) -> ApiResponse[Any, Any, reflectapi_demo.tests.basic.ResponseHeaders]:
        """

        Returns:
            ApiResponse[Any, Any, reflectapi_demo.tests.basic.ResponseHeaders]: Response containing Any data
        """
        path = "/infallible"

        params: dict[str, Any] = {}
        return self._make_request(
            path,
            params=params if params else None,
            response_model=None,
            response_headers_model=reflectapi_demo.tests.basic.ResponseHeaders,
        )


# External type definitions
StdNumNonZeroU32 = Annotated[int, "Rust NonZero u32 type"]
StdNumNonZeroU64 = Annotated[int, "Rust NonZero u64 type"]
StdNumNonZeroI32 = Annotated[int, "Rust NonZero i32 type"]
StdNumNonZeroI64 = Annotated[int, "Rust NonZero i64 type"]

# Rebuild models to resolve forward references
_rebuild_errors: list[str] = []
for _model in [
    ReflectapiDemoTestsBasicCacheStatus,
    ReflectapiDemoTestsBasicResponseHeaders,
    ReflectapiDemoTestsBasicResponseHeadersTestError,
    ReflectapiDemoTestsBasicRouteResponseHeaders,
]:
    if not hasattr(_model, "model_rebuild"):
        continue
    try:
        _model.model_rebuild()
    except Exception as _exc:
        _rebuild_errors.append(f"  - {_model.__name__}: {type(_exc).__name__}: {_exc}")
if _rebuild_errors:
    raise RuntimeError(
        "reflectapi: failed to rebuild "
        + str(len(_rebuild_errors))
        + " generated model(s). This usually means the codegen emitted an annotation pointing at a symbol that was never defined (a dangling type reference). Fix the codegen rather than catching this error.\n"
        + "\n".join(_rebuild_errors)
    )
